Fix: bg wolvy logo layout shift

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -126,15 +126,22 @@ body {
 
 /* background */
 .bg_logo {
-  width: min(35rem, 100%);
-  height: auto;
+  width: 100%;
+  overflow: hidden;
+  min-height: 100%;
+  max-width: 100vw;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   animation: bg_breathe_animation 8s infinite ease;
   color: var(--black400);
   z-index: -1;
+}
+
+.bg_logo>svg {
+  width: min(35rem, 100%);
+  height: auto;
 }
 
 .bg_rounded {
